--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -54,9 +54,42 @@ commands:
     usage: /uuid <gracz>
     description: Pobiera UUID gracza i wyświeltla je.
   banip:
+    usage: /banip <gracz>
+    description: Banuje IP gracza
+    permission: essentials.banip
   helpop:
+    usage: /helpop <wiadomosc>
+    description: Wysyła wiadomość do administracji
   reload:
+    usage: /reload
+    description: Przeładowuje config pluginu
+    permission: essentials.reload
   alert:
+    usage: /alert <typ> <wiadomosc>
+    description: Wysyła alert do graczy
+    permission: essentials.alert
   freeze:
+    usage: /freeze <gracz>
+    description: Zamraża gracza
+    permission: essentials.freeze
   msg:
+    usage: /msg <gracz> <wiadomosc>
+    description: Wysyla prywatna wiadomosc do gracza
+    permission: essentials.msg
+  chat:
+    usage: /chat <on/off/clear> [powód]
+    description: Pozwala na administrowanie chatem
+    permission: essentials.chat
+  god:
+    usage: /god [gracz]
+    description: Pozwala na włączenie god-mode
+    permission: essentials.god
+  mute:
+    usage: /mute <gracz> [powód]
+    description: Pozwala na wyciszenie danego gracza
+    permission: essentials.mute
+  unban:
+    usage: /unban <gracz>
+    description: Odbanowuje gracza
+    permission: essentials.unban
 
