--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ group = 'dev.jakubk15'
 version = '1.6-SNAPSHOT'
 description = 'Casedropcore'
 java {
-    toolchain.languageVersion.set(JavaLanguageVersion.of(16));
+    toolchain.languageVersion.set(JavaLanguageVersion.of(16))
 }
 
 tasks.withType(JavaCompile) {
