--- a/build.gradle
+++ b/build.gradle
@@ -42,5 +42,5 @@ tasks.withType(JavaCompile) {
 }
 
 shadowJar {
-    archiveFileName.set("CaseDrop-Core v.${project.version}")
+    archiveFileName.set("CaseDrop-Core v.${project.version}.jar")
 }
