Create constructor for every class.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -116,4 +116,8 @@ commands:
     usage: /stonecutter
     description: Otwiera stonecutter
     permission: essentials.stonecutter
+  unmute:
+    usage: /unmute <nick>
+    description: Odcisza gracza
+    permission: essentials.unmute
 
