--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
 
 plugins {
     id 'java'
-    id "com.github.johnrengelman.shadow" version "7.1.0"
+    id "com.github.johnrengelman.shadow" version "7.+"
 }
 
 repositories {
@@ -32,7 +32,7 @@ dependencies {
 
 group = 'dev.jakubk15'
 version = '1.6-SNAPSHOT'
-description = 'Casedropcore'
+description = 'casedropcore'
 java {
     toolchain.languageVersion.set(JavaLanguageVersion.of(16))
 }
@@ -42,5 +42,5 @@ tasks.withType(JavaCompile) {
 }
 
 shadowJar {
-    archiveFileName.set("CaseDrop-Core v.${project.version}")
+    archiveFileName.set("casedrop-core-${project.version}.jar")
 }
