--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,20 +12,19 @@ on:
     branches: [ dev/1.18 ]
   pull_request:
     branches: [ dev/1.18 ]
-
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 17
-      uses: actions/setup-java@v2
-      with:
-        java-version: '17'
-        distribution: 'adopt'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
-      with:
-        arguments: build
+    build:
+        name: "🔨 Successfully build with JDK${{ matrix.jdk }}"
+        runs-on: ubuntu-latest
+        strategy:
+            jdk: [ 17 ]
+        steps:
+            -   uses: actions/checkout@v2
+            -   name: Set up JDK
+                uses: actions/setup-java@v1
+                with:
+                    java-version: ${{ jdk }}
+            -   name: Grant execute permission for gradlew
+                run: chmod +x gradlew
+            -   name: Build with Gradle
+                run: ./gradlew build --stacktrace -i
