--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,13 +17,14 @@ jobs:
         name: "🔨 Successfully build with JDK${{ matrix.jdk }}"
         runs-on: ubuntu-latest
         strategy:
-            jdk: [ 17 ]
+            matrix:
+                jdk: [ 17 ]
         steps:
             -   uses: actions/checkout@v2
             -   name: Set up JDK
                 uses: actions/setup-java@v1
                 with:
-                    java-version: ${{ jdk }}
+                    java-version: ${{ matrix.jdk }}
             -   name: Grant execute permission for gradlew
                 run: chmod +x gradlew
             -   name: Build with Gradle
