--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/
 *.iml
 *.ipr
 *.iws
-
+!gradle/wrapper/gradle-wrapper.jar
 # IntelliJ
 out/
 
@@ -18,14 +18,6 @@ out/
 # BlueJ files
 *.ctxt
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
