--- a/build.gradle
+++ b/build.gradle
@@ -42,5 +42,5 @@ tasks.withType(JavaCompile) {
 }
 
 shadowJar {
-    archiveFileName.set("casedrop-core v.${project.version}.jar")
+    archiveFileName.set("casedrop-core-${project.version}.jar")
 }
