--- a/build.gradle
+++ b/build.gradle
@@ -12,14 +12,21 @@ repositories {
     mavenLocal()
     maven { url = ('https://papermc.io/repo/repository/maven-public/') }
 
+    maven { url = ('https://jitpack.io') }
+
     maven { url = ('https://oss.sonatype.org/content/groups/public/') }
 
     maven { url = ('https://repo.maven.apache.org/maven2/') }
 }
 
 dependencies {
+
+
     // paper api
     compileOnly("io.papermc.paper:paper-api:1.18.1-R0.1-SNAPSHOT")
+
+    // foundation
+    compileOnly("com.github.kangarko:foundation:5.12.5")
 
     // lombok
     compileOnly ("org.projectlombok:lombok:1.18.22")
@@ -43,4 +50,5 @@ tasks.withType(JavaCompile) {
 shadowJar {
     archiveFileName.set("casedrop-core-${project.version}.jar")
     relocate("net.kyori", "dev.jakubk15.casedropcore.libs.kyori")
+    relocate("org.mineacademy", "dev.jakubk15.casedropcore.libs.fo")
 }
