--- a/build.gradle
+++ b/build.gradle
@@ -11,17 +11,13 @@ repositories {
     mavenCentral()
     mavenLocal()
     maven { url = ('https://papermc.io/repo/repository/maven-public/') }
-
     maven { url = ('https://jitpack.io') }
-
     maven { url = ('https://oss.sonatype.org/content/groups/public/') }
-
+    maven { url = ('https://bitbucket.org/kangarko/libraries/src/master') }
     maven { url = ('https://repo.maven.apache.org/maven2/') }
 }
 
 dependencies {
-
-
     // paper api
     compileOnly("io.papermc.paper:paper-api:1.18.1-R0.1-SNAPSHOT")
 
@@ -29,7 +25,7 @@ dependencies {
     compileOnly("com.github.kangarko:foundation:5.12.5")
 
     // lombok
-    compileOnly ("org.projectlombok:lombok:1.18.22")
+    compileOnly("org.projectlombok:lombok:1.18.22")
     annotationProcessor("org.projectlombok:lombok:1.18.22")
 
     // kyori
