--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,11 @@ plugins {
 repositories {
     mavenCentral()
     mavenLocal()
-    maven { url = ('https://papermc.io/repo/repository/maven-public/') }
     maven { url = ('https://jitpack.io') }
     maven { url = ('https://oss.sonatype.org/content/groups/public/') }
 }
 
 dependencies {
-    // paper api
-    compileOnly("io.papermc.paper:paper-api:1.18.1-R0.1-SNAPSHOT")
 
     // foundation
     implementation("com.github.kangarko:foundation:5.12.5") {
@@ -51,15 +48,13 @@ dependencies {
     compileOnly("org.projectlombok:lombok:1.18.22")
     annotationProcessor("org.projectlombok:lombok:1.18.22")
 
-    // kyori
-    implementation "net.kyori:adventure-api:4.9.3"
 }
 
 group = 'dev.jakubk15'
-version = '2.0-ALPHA'
+version = '2.0-ALPHASPIGOT'
 description = 'casedropcore'
 java {
-    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
+    toolchain.languageVersion.set(JavaLanguageVersion.of(8))
 }
 
 tasks.withType(JavaCompile) {
@@ -68,6 +63,5 @@ tasks.withType(JavaCompile) {
 
 shadowJar {
     archiveFileName.set("casedrop-core-${project.version}.jar")
-    relocate("net.kyori", "dev.jakubk15.casedropcore.lib.kyori")
     relocate("org.mineacademy.fo", "dev.jakubk15.casedropcore.lib")
 }
