--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 }
 
 group = 'dev.jakubk15'
-version = '2.0-ALPHASPIGOT'
+version = '2.0-ALPHA'
 description = 'casedropcore'
 java {
     toolchain.languageVersion.set(JavaLanguageVersion.of(8))
