[ci skip] Update gradle.yml

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,9 +2,9 @@ name: Java CI with Gradle
 
 on:
     push:
-        branches: [ master, 2.0 ]
+        branches: [ master ]
     pull_request:
-        branches: [ master, 2.0 ]
+        branches: [ master ]
 jobs:
     build:
         name: "🔨 Successfully build with JDK${{ matrix.jdk }}"
