--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 dependencies {
 
     // foundation
-    implementation("com.github.kangarko:foundation:5.12.5") {
+    implementation("com.github.kangarko:foundation:5.12.8") {
         exclude group: 'org.mineacademy.plugin', module: 'AuthMe'
         exclude group: 'org.mineacademy.plugin', module: 'CitizensAPI'
         exclude group: 'org.mineacademy.plugin', module: 'CMI-API'
@@ -50,8 +50,8 @@ dependencies {
 
 }
 
-group = 'dev.jakubk15'
-version = '2.0-ALPHA'
+group = 'xyz.jakubk15'
+version = '2.1-ALPHA'
 description = 'casedropcore'
 java {
     toolchain.languageVersion.set(JavaLanguageVersion.of(8))
